Archive2/b2/e7476accf840b9/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include <iostream> 
   ^
main.cpp:6:1: error: stray '\304' in program
 [ [ noreturn ] ]  void ( int počítať )  
 ^
main.cpp:6:1: error: stray '\215' in program
main.cpp:6:1: error: stray '\303' in program
main.cpp:6:1: error: stray '\255' in program
main.cpp:6:1: error: stray '\305' in program
main.cpp:6:1: error: stray '\245' in program
main.cpp:8:5: error: stray '\304' in program
     std :: cout  <<  "("  << počet <<  ") s názvom \ n " ; 
     ^
main.cpp:8:5: error: stray '\215' in program
main.cpp:9:5: error: stray '\303' in program
     std :: longjmp ( jump_buffer, count + 1 ) ;   / / setjump ( ) vráti počet 1 
     ^
main.cpp:9:5: error: stray '\241' in program
main.cpp:9:5: error: stray '\304' in program
main.cpp:9:5: error: stray '\215' in program
main.cpp:15:5: error: stray '\304' in program
     ak  ( počet ! =  9 )  { ( počet ) ;   / / To spôsobí setjmp () ukončíte 
     ^
main.cpp:15:5: error: stray '\215' in program
main.cpp:15:5: error: stray '\304' in program
main.cpp:15:5: error: stray '\215' in program
main.cpp:15:5: error: stray '\303' in program
main.cpp:15:5: error: stray '\264' in program
main.cpp:15:5: error: stray '\303' in program
main.cpp:15:5: error: stray '\255' in program
main.cpp:15:5: error: stray '\304' in program
main.cpp:15:5: error: stray '\215' in program
main.cpp:15:5: error: stray '\303' in program
main.cpp:15:5: error: stray '\255' in program
main.cpp:6:26: error: expected unqualified-id before 'int'
 [ [ noreturn ] ]  void ( int počítať )  
                          ^
main.cpp:6:26: error: expected ')' before 'int'
main.cpp: In function 'int main()':
main.cpp:15:11: error: 'po' was not declared in this scope
     ak  ( počet ! =  9 )  { ( počet ) ;   / / To spôsobí setjmp () ukončíte 
           ^
main.cpp:15:28: error: expected ',' or ';' before '{' token
     ak  ( počet ! =  9 )  { ( počet ) ;   / / To spôsobí setjmp () ukončíte 
                            ^
main.cpp:14:9: warning: unused variable 'count' [-Wunused-variable]
     int count =  setjmp ( jump_buffer ) , 
         ^
main.cpp:15:5: warning: unused variable 'ak' [-Wunused-variable]
     ak  ( počet ! =  9 )  { ( počet ) ;   / / To spôsobí setjmp () ukončíte 
     ^
